# banned-words-service

./: .gitignore  .gitmodules  API.md  CLAUDE.md  CLI_IMPLEMENTATION_PLAN.md  Cargo.toml  DESIGN.md  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  README.md  RELEASE.md  build.rs  compose.yaml
.claude/: settings.local.json
.github/workflows/: release.yml
deploy/: Containerfile
deploy/k8s/: deployment.yaml
scripts/: load-test.sh
src/: auth.rs  cli.rs  config.rs  error.rs  lib.rs  limits.rs  main.rs  model.rs  state.rs
src/matcher/: mod.rs
src/routes/: check.rs  health.rs  languages.rs  mod.rs
tests/: cli.rs  http.rs
