[package]
name = "banned-words-service"
version = "0.1.0"
edition = "2021"
rust-version = "1.94"
description = "Vocab Veto — stateless multi-language banned-words HTTP service."
license = "MIT"
publish = false

[dependencies]
phf = { version = "0.11", features = ["macros"] }

[profile.release]
lto = "thin"
codegen-units = 1
